--- a/pronto/views/stock_picking_views.xml
+++ b/pronto/views/stock_picking_views.xml
@@ -1,6 +1,6 @@
 <odoo>
 
-    <record id="view_picking_withcarrier_out_form_inherit" model="ir.ui.view">
+    <record id="stock_voucher_view_picking_withcarrier_out_form_inherit" model="ir.ui.view">
         <field name="name">stock.picking.delivery_extension.form</field>
         <field name="model">stock.picking</field>
         <field name="inherit_id" ref="stock_voucher.view_picking_withcarrier_out_form"/>
@@ -21,6 +21,26 @@
                 <!-- <attribute name="attrs">{'invisible': [True]}</attribute> -->
                 <attribute name="attrs">{'invisible': ['|',('book_id','!=',False),'|', ('state','!=','done')]}</attribute>                
             </button>
+
+            <field name="declared_value" position="attributes">
+                <attribute name="attrs">{'invisible': [True]}</attribute>
+            </field>
+
         </field>
     </record>
+
+    <record id="view_picking_withcarrier_out_form_inherit" model="ir.ui.view">
+        <field name="name">delivery.stock.picking_withcarrier.form.view</field>
+        <field name="model">stock.picking</field>
+        <field name="inherit_id" ref="delivery.view_picking_withcarrier_out_form"/>
+        <field name="arch" type="xml">
+    	
+            <field name="shipping_weight" position="before">
+                <field name="currency_id" invisible="1" groups="base.group_multi_currency" />
+                <field name="valor_declarado" widget='monetary' options="{'currency_field': 'currency_id'}" attrs="{'invisible': [('picking_type_code','=','incoming')]}" />
+            </field>
+
+        </field>
+    </record>
+
 </odoo>
