--- a/pronto/views/stock_inventory_views.xml
+++ b/pronto/views/stock_inventory_views.xml
@@ -12,6 +12,9 @@
                     <field name="message_ids" widget="mail_thread"/>
                 </div>
             </xpath>
+            <field name="product_qty" position="after">
+                <field name="diff_real_theo_qty"/>
+            </field>
         </field>
     </record>
 
