[IMP] pronto: Pasar de 2 a 4 decimales el precio fijo en la tarifa de costo

--- a/pronto/views/product_pricelist_item_views.xml
+++ b/pronto/views/product_pricelist_item_views.xml
@@ -9,6 +9,14 @@
             <field name="applied_on" position="before">
                 <field name="write_date" string="Ultima modificación"/>
             </field>
+
+            <field name="fixed_price" position="replace">
+                <!-- original -->
+                <!-- <field name="fixed_price" nolabel="1" widget="monetary" options="{'currency_field': 'currency_id'}"/> -->
+                <!-- le saco el widget -->
+                <field name="fixed_price" nolabel="1" />
+            </field>
+
         </field>
     </record>
 
