--- a/pronto/views/product_template_views.xml
+++ b/pronto/views/product_template_views.xml
@@ -39,4 +39,18 @@
         </field>
     </record>
 
+    <record id="product_template_form_view_inherit" model="ir.ui.view">
+        <field name="name">product.template.common.form</field>
+        <field name="model">product.template</field>
+        <field name="inherit_id" ref="product.product_template_form_view"/>
+        <field name="arch" type="xml">
+            <xpath expr="//tree/field[@name='fixed_price']" position="replace">
+                <!-- original -->
+                <!-- <field name="fixed_price" string="Price" required="1" widget="monetary" options="{'currency_field': 'currency_id'}"/> -->
+                <!-- le saco el widget -->                
+                <field name="fixed_price" string="Price" required="1" />
+            </xpath>
+        </field>
+    </record>
+
 </odoo>
