--- a/pronto/views/product_template_views.xml
+++ b/pronto/views/product_template_views.xml
@@ -53,4 +53,34 @@
         </field>
     </record>
 
+    <record id="product_template_only_form_view_inherit" model="ir.ui.view">
+        <field name="name">product.template.product.form</field>
+        <field name="model">product.template</field>
+        <field name="priority">10</field>
+        <field name="inherit_id" ref="product.product_template_only_form_view"/>
+        <field name="arch" type="xml">
+
+            <field name="default_code" position="attributes">
+                <attribute name="attrs">{'required':[('type','=','product')]}</attribute>
+            </field>
+
+            <!-- así tambien funciona 
+                <field name="default_code" position="attributes">
+                <attribute name="attrs">{'required':[('type','in',['product'])]}</attribute>
+            </field> -->
+
+            <field name="description_sale" position="attributes">
+                <attribute name="attrs">{'required':[('type','=','product'),('sale_ok','=',True)]}</attribute>
+            </field>
+
+        </field>
+    </record>
+
+    <record id="sale.product_template_action" model="ir.actions.act_window">
+        <field name="context">{"search_default_filter_to_sell":1, "sale_multi_pricelist_product_template": 1, 'default_type': 'product'}</field>
+    </record>
+
+    <record id="purchase.product_normal_action_puchased" model="ir.actions.act_window">
+        <field name="context">{"search_default_filter_to_purchase":1, "purchase_product_template": 1, 'default_type': 'product'}</field>
+    </record>
 </odoo>
