--- a/pronto/views/sale_order_views.xml
+++ b/pronto/views/sale_order_views.xml
@@ -22,6 +22,9 @@
                     <field name="weight_uom_name" nolabel="1" class="oe_inline" style="margin-left:5px"/>
                 </div>
             </field>
+            <field name="date_order" position="after">
+                <field name="cotizacion" readonly="1" force_save="1"/>
+            </field>
         </field>
     </record>
 
@@ -35,5 +38,19 @@
             </field>
         </field>
     </record>
+
+    <record id="sale_order_line_view_form_readonly_inherit" model="ir.ui.view">
+        <field name="name">sale.order.line.form.readonly</field>
+        <field name="model">sale.order.line</field>
+        <field name="inherit_id" ref="sale.sale_order_line_view_form_readonly"/>
+        <field name="arch" type="xml">
+            <field name="price_total" position="after">
+                <field name="costo_total_pesos" readonly="1"/>
+                <field name="precio_total_pesos" readonly="1"/>
+            </field>
+        </field>
+    </record>
+
+
 
 </odoo>
