--- a/pronto/views/sale_order_views.xml
+++ b/pronto/views/sale_order_views.xml
@@ -51,6 +51,16 @@
         </field>
     </record>
 
-
+    <record id="sale_margin_sale_order_line_form_inherit" model="ir.ui.view">
+        <field name="name">sale.order.line.tree.margin.view.form</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale_margin.sale_margin_sale_order_line_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='order_line']/tree//field[@name='purchase_price']" position="attributes">
+                <attribute name="attrs">{'readonly': True}</attribute>
+                <attribute name="attrs">{'force_save': True}</attribute>
+            </xpath>
+        </field>
+    </record>
 
 </odoo>
