--- a/pronto/views/sale_order_views.xml
+++ b/pronto/views/sale_order_views.xml
@@ -56,9 +56,12 @@
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale_margin.sale_margin_sale_order_line_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='order_line']/tree//field[@name='purchase_price']" position="attributes">
+            <!-- <xpath expr="//field[@name='order_line']/tree//field[@name='purchase_price']" position="attributes">
                 <attribute name="attrs">{'readonly': True}</attribute>
                 <attribute name="attrs">{'force_save': True}</attribute>
+            </xpath> -->
+            <xpath expr="//field[@name='order_line']/tree//field[@name='purchase_price']" position="replace">
+                <field name="purchase_price" groups="base.group_user" readonly="1" force_save="1" />
             </xpath>
         </field>
     </record>
