[12.0][IMP] box: integración caja - gastos

--- a/box/views/box_session_journal_line_views.xml
+++ b/box/views/box_session_journal_line_views.xml
@@ -20,6 +20,7 @@
                         <field name="name"/>
                         <field name="partner_id"/>
                         <field name="amount"/>
+                        <field name="expense_id"/>
                     </group>
                 </group>
             </sheet>
