--- a/pronto/views/sale_portal_templates.xml
+++ b/pronto/views/sale_portal_templates.xml
@@ -8,5 +8,9 @@
             </div>
         </div>
 
+        <xpath expr="//t[@t-if='not line.display_type']" position="attributes">
+            <attribute name="t-if">not line.display_type and (line.pack_parent_line_id.product_id.show_components_to_customer or line.pack_parent_line_id.product_id.pack_component_price != 'totalized')</attribute>
+        </xpath>
+
     </template>
 </odoo>
