--- a/box/wizard/box_session_expense.xml
+++ b/box/wizard/box_session_expense.xml
@@ -8,7 +8,7 @@
             <form>
                 <group>
                     <group> 
-                        <field name="name" /> 
+                        <field name="name" required="1" /> 
                     <!-- </group>
                     <group>  -->
                         <!-- <field name="unit_amount" /> -->
