[12.0][FIX] box: de forma incorrecta exigia informar el campo "diario del banco" cuando pagaba el empleado

--- a/box/views/hr_expense_sheet_views.xml
+++ b/box/views/hr_expense_sheet_views.xml
@@ -12,7 +12,7 @@
                 <!-- attrs="{'invisible': [('parent_id','=', False)]}" -->
             </field>
             <xpath expr="//field[@name='bank_journal_id']" position="attributes">
-                <attribute name="required">1</attribute>
+                <attribute name="attrs">{'invisible': [('payment_mode', '!=', 'company_account')], 'required': [('payment_mode','=','company_account')]}</attribute>
             </xpath>
         </field>
     </record>
