[12.0][IMP] pronto: control de actualización de costos

--- a/pronto/views/company.xml
+++ b/pronto/views/company.xml
@@ -8,6 +8,7 @@
         <!-- <field name="stock_delivery_note"/> -->
         <field name="product_pricelist_cost_id"/>
         <field name="usuario_responsable_reserva_stock_id"/>
+        <field name="usuario_responsable_actualizacion_costo_id"/>
       </xpath>
     </field>
   </record>
