[12.0][IMP] delivery_qx: que se puede modificar el orden de las reglas

--- a/delivery_qx/views/delivery_qx_view.xml
+++ b/delivery_qx/views/delivery_qx_view.xml
@@ -21,6 +21,7 @@
 
             <field name="price_rule_ids" position="inside">
                 <tree>
+                    <field name="sequence" widget="handle"/>
                     <field name="name"/>
                     <field name="zona_qx_id" attrs="{'column_invisible': [('parent.delivery_type', '!=', 'qx')]}" />
                 </tree>
