[12.0][IMP] pronto: restringir a tarifa costo en producto

--- a/pronto/views/product_template_views.xml
+++ b/pronto/views/product_template_views.xml
@@ -53,6 +53,9 @@
             <page name="inventory" position="attributes">
                 <attribute name="groups">stock.group_stock_user,product.group_stock_packaging,pronto.group_compras_crear_modificar_productos</attribute>
             </page>
+            <xpath expr="//tree/field[@name='pricelist_id']" position="attributes">
+                <attribute name="domain">[("id", "=", 2)]</attribute>
+            </xpath>
         </field>
     </record>
 
