--- a/project_task_complexity_level/views/project_task_complexity_views.xml
+++ b/project_task_complexity_level/views/project_task_complexity_views.xml
@@ -36,7 +36,7 @@
                     </div>
                     <group>
                         <field name="description"/>
-                        <field name="project_id"/>
+                        <field name="project_id" options="{'no_create': True, 'no_open': False}" required="1"/>
                     </group>
                 </sheet>
             </form>
