--- a/pronto/views/stock_location_views.xml
+++ b/pronto/views/stock_location_views.xml
@@ -6,6 +6,7 @@
         <field name="inherit_id" ref="stock.view_location_form"/>
         <field name="arch" type="xml">
             <field name="return_location" position="after">
+                <field name="usuario_responsable_reserva_stock_id"/>
                 <field name="computar_stock_disponible" />
             </field>
         </field>
