--- a/pronto/views/product_template_views.xml
+++ b/pronto/views/product_template_views.xml
@@ -44,6 +44,11 @@
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_form_view"/>
         <field name="arch" type="xml">
+
+            <field name="categ_id" position="after">
+                <field name="entregar_al_confirmar_prespuesto" attrs="{'invisible': [('type', '!=', 'service')]}"/>
+            </field>
+
             <xpath expr="//tree/field[@name='fixed_price']" position="replace">
                 <!-- original -->
                 <!-- <field name="fixed_price" string="Price" required="1" widget="monetary" options="{'currency_field': 'currency_id'}"/> -->
