--- a/pronto/views/res_partner_views.xml
+++ b/pronto/views/res_partner_views.xml
@@ -103,4 +103,15 @@
         <field name="context">{"search_default_customer":1,"default_sale_type":4,"default_property_payment_term_id":1}</field>
     </record>
 
+    <record id="res_partner_view_risk_inherit" model="ir.ui.view">
+        <field name="name">res.partner.view.risk</field>
+        <field name="model">res.partner</field>
+        <field name="inherit_id" ref="account_financial_risk.res_partner_view_risk"/>
+        <field name="arch" type="xml">
+            <xpath expr="//page[@name='financial_risk']" position="attributes">
+                <attribute name="groups">pronto.group_gestionar_riesgo_financiero</attribute>
+            </xpath>
+        </field>
+    </record>
+
 </odoo>
