[12.0][IMP] pronto: crear oportunidad en lugar de iniciativa desde el pedido

--- a/pronto/views/sale_order_views.xml
+++ b/pronto/views/sale_order_views.xml
@@ -17,6 +17,7 @@
             </xpath>
             <field name="opportunity_id" position="attributes">
                 <attribute name="groups">base.group_user</attribute>
+                <attribute name="context">{'default_type': 'opportunity'}</attribute>
             </field>
             <field name="commitment_date" position="after">
                 <label for="weight" string="Peso total"/>
