[12.0][IMP] box: - vinculación ingreso de caja y tipo de venta (a traves del recibo) - motivo de ingreso/egreso de efectivo - nueva vista lista para los movimientos de caja (con busqueda por varios campos y agrupamiento)

--- a/box/views/box_session_journal_line_views.xml
+++ b/box/views/box_session_journal_line_views.xml
@@ -21,11 +21,71 @@
                         <field name="partner_id"/>
                         <field name="amount"/>
                         <field name="expense_id"/>
+                        <field name="sale_type"/>
+                        <field name="journal_id"/>
+                        <field name="reason_id"/>
                     </group>
                 </group>
             </sheet>
             </form>
         </field>
+    </record>
+
+    <record id="view_box_session_tree" model="ir.ui.view">
+        <field name="name">box.session.tree.view</field>
+        <field name="model">box.session.journal.line</field>
+        <field name="arch" type="xml">
+            <tree default_order="box_session_id asc" create="false" delete="false" edit="false">
+                <field name="box_id"/>
+                <field name="box_session_id"/>
+                <field name="journal_id"/>
+                <field name="date"/>
+                <field name="account_payment_id"/>
+                <field name="name"/>
+                <field name="partner_id"/>
+                <field name="amount"/>
+                <field name="expense_id"/>
+                <field name="sale_type"/>
+                <field name="reason_id"/>
+            </tree>
+        </field>
+    </record>
+
+    <!-- addons-itsur\pronto\report\sale_report_pronto.xml -->
+    <record id="view_box_session_search" model="ir.ui.view">
+        <field name="name">box.session.journal.line.search</field>
+        <field name="model">box.session.journal.line</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="box_id"/>
+                <field name="box_session_id"/>
+                <field name="journal_id"/>
+                <field name="date"/>
+                <field name="account_payment_id"/>
+                <field name="name"/>
+                <field name="partner_id"/>
+                <field name="amount"/>
+                <field name="expense_id"/>
+                <field name="sale_type"/>
+                <field name="reason_id"/>
+                <separator/>
+                <group expand="1" string="Group By">
+                    <filter string="Caja" name="caja" context="{'group_by':'box_id'}"/>
+                    <filter string="Sesión" name="sesion" context="{'group_by':'box_session_id'}"/>
+                    <filter string="Diario" name="diario" context="{'group_by':'journal_id'}"/>
+                </group>
+            </search>
+        </field>
+    </record> 
+
+    <record id="box_session_journal_line_action" model="ir.actions.act_window">
+        <field name="name">Detalle de movimientos de caja</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">box.session.journal.line</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">tree</field>
+        <field name="view_id" eval="False"/>
+        <field name="context">{'search_default_caja': 1,'search_default_sesion': 1,'search_default_diario': 1, }</field>
     </record>
 
   </data>
