--- a/box/views/menus.xml
+++ b/box/views/menus.xml
@@ -15,12 +15,25 @@
         sequence="100"
         groups="box.group_box_manager"/>
 
-    <menuitem id="menu_box_session" 
+    <menuitem id="menu_box_session_root" 
         name="Sesiones"
         parent="menu_box_root"
+        sequence="200"
+        groups="box.group_box_manager"/>
+
+    <menuitem id="menu_box_session" 
+        name="Sesiones"
+        parent="menu_box_session_root"
         action="box_session_action"
         sequence="200"
         groups="box.group_box_manager"/>
 
+    <menuitem id="menu_box_session_journal_line" 
+        name="Detalles"
+        parent="menu_box_session_root"
+        action="box_session_journal_line_action"
+        sequence="200"
+        groups="box.group_box_manager"/>
+              
   </data>
 </odoo>
