[12.0][IMP] pronto: agrega etiquetas campo de búsqueda en prespuestos/pedidos

--- a/pronto/views/sale_order_views.xml
+++ b/pronto/views/sale_order_views.xml
@@ -39,6 +39,7 @@
         <field name="arch" type="xml">
             <field name="partner_id" position="after">
                 <field name="opportunity_id" />
+                <field name="tag_ids" />
             </field>
         </field>
     </record>
