--- a/pronto/views/res_partner_views.xml
+++ b/pronto/views/res_partner_views.xml
@@ -35,7 +35,7 @@
         <field name="arch" type="xml">
 
             <field name="zip_id" position="attributes">
-                <attribute name="attrs">{'required': [('customer','=',True)]}</attribute>
+                <attribute name="attrs">{'required': [('customer','=',True),('country_id','=',10)]}</attribute>
             </field>
 
         </field>
