--- a/pronto/views/sale_order_views.xml
+++ b/pronto/views/sale_order_views.xml
@@ -9,8 +9,8 @@
             <xpath expr="//button[@name='action_unlock']" position="attributes">
                 <attribute name="groups">sales_team.group_sale_manager,pronto.group_unlock_sale_order</attribute>
             </xpath>
-            <field name="payment_term_id" position="before">
-                <field name="debt_balance" decoration-danger="debt_balance &gt; 0" decoration-success="debt_balance &lt; 0" attrs="{'invisible': [('state', 'in', ['sale', 'done', 'cancel'])]}"/>
+            <field name="payment_term_id" position="before">                
+                <field name="debt_balance" widget='monetary' options="{'currency_field': 'debt_balance_currency_id'}" decoration-danger="debt_balance &gt; 0" decoration-success="debt_balance &lt; 0" attrs="{'invisible': [('state', 'in', ['sale', 'done', 'cancel'])]}"/>                
             </field>
             <xpath expr="//group[@name='technical']" position="attributes">
                 <attribute name="groups">base.group_user</attribute>
