[12.0][FIX] pronto: agrego campo 'motivo devolución' a la vista de pickings

--- a/pronto/views/stock_picking_views.xml
+++ b/pronto/views/stock_picking_views.xml
@@ -67,7 +67,13 @@
                     <field name="state"/>
                 </tree>
             </field>
-                        
+
+            <field name="move_ids_without_package" position="after">
+                <group>
+            	    <field name="reason_id" readonly="1" />
+                </group>
+            </field>
+
         </field>
     </record>
 
