--- a/pronto/views/sale_order_views.xml
+++ b/pronto/views/sale_order_views.xml
@@ -9,6 +9,9 @@
             <xpath expr="//button[@name='action_unlock']" position="attributes">
                 <attribute name="groups">sales_team.group_sale_manager,pronto.group_unlock_sale_order</attribute>
             </xpath>
+            <field name="partner_shipping_id" position="after">                
+                <field name="sale_order_reference" />
+            </field>
             <field name="payment_term_id" position="before">                
                 <field name="debt_balance" widget='monetary' options="{'currency_field': 'debt_balance_currency_id'}" decoration-danger="debt_balance &gt; 0" decoration-success="debt_balance &lt; 0" attrs="{'invisible': [('state', 'in', ['sale', 'done', 'cancel'])]}"/>                
             </field>
@@ -87,6 +90,17 @@
             <xpath expr="//field[@name='order_line']/tree//field[@name='purchase_price']" position="replace">
                 <field name="purchase_price" groups="base.group_user" readonly="1" force_save="1" />
             </xpath>
+        </field>
+    </record>
+
+    <record id="view_order_tree_extend" model="ir.ui.view">
+        <field name="name">sale.order.tree</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_tree"/>
+        <field name="arch" type="xml">
+            <field name="partner_id" position="after">                
+                <field name="sale_order_reference" />
+            </field>
         </field>
     </record>
 
